--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@xstate/react": "^1.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "xstate": "^4.16.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
